# apis-instance-gideon

./: README.md  pyproject.toml
.github/: auto-deploy-values.yaml
.github/workflows/: deploy.yml
apis_instance_gideon/: admin.py  apps.py  filtersets.py  forms.py  models.py  settings.py  tables.py
apis_instance_gideon/management/commands/: import.py
apis_instance_gideon/migrations/: 0001_initial.py  0002_alter_person_forename_alter_versionperson_forename.py  0003_remove_versionperson_version_tag.py  0004_alter_person_options_alter_place_options.py  0005_alter_bornin_options_alter_diedin_options_and_more.py
apis_instance_gideon/templates/apis_instance_gideon/: person_detail.html
apis_instance_gideon/templates/apis_instance_gideon/partials/: person_alternative_names_value.html  quote_attachments_value.html
apis_ontology/: models.py
apis_ontology/management/commands/: import.py
