[project]
name = "apis-instance-gideon"
version = "0.1.0"
description = "Some APIS instance"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
license = "MIT"
dependencies = [
   "apis-core-rdf==0.59.0",
   "apis-acdhch-default-settings==2.16.0",
   "psycopg2>=2.9,<3.0",
   "django-interval>=0.5.1",
   "django-auditlog==3.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
