[project]
name = "apis-instance-gideon"
version = "0.1.0"
description = "Some APIS instance"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" }]
license = "MIT"
dependencies = [
   "apis-core-rdf==0.62.1",
   "apis-acdhch-default-settings==2.18.0",
   "psycopg[binary]",
   "django-interval>=0.5.1",
   "django-auditlog==3.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
